unpackaged/main/default/objects/Pre_Venta__c/Pre_Venta__c.object-meta.xml
<CustomObject>
    <label>Pre Venta</label>
    <nameField>
        <label>NombreObjeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Ventas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>