unpackaged/main/default/objects/Pre_Venta__c/fields/Approval_Obj_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Obj_Type__c</fullName>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>