unpackaged/main/default/objects/Pre_Venta__c/fields/Approval_Object_Fracc_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_Fracc_Id__c</fullName>
    <label>Approval Object Fracc Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>