unpackaged/main/default/objects/Pre_Venta__c/fields/Approval_Object_Fracc_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_Fracc_Name__c</fullName>
    <label>Fraccionamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>