unpackaged/main/default/objects/Pre_Venta__c/fields/Approval_Object_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_Level__c</fullName>
    <label>Tipo Nivel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>