unpackaged/main/default/objects/Pre_Venta__c/fields/Approval_Object_LevelValue__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_LevelValue__c</fullName>
    <label>Valor de Nivel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>