unpackaged/main/default/objects/Pre_Venta__c/fields/approvalId__c.field-meta.xml
<CustomField>
    <fullName>approvalId__c</fullName>
    <label>approvalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>