unpackaged/main/default/objects/Pre_Venta__c/fields/approvalName__c.field-meta.xml
<CustomField>
    <fullName>approvalName__c</fullName>
    <label>approvalName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>