unpackaged/main/default/objects/Pre_Venta__c/fields/approvalObject__c.field-meta.xml
<CustomField>
    <fullName>approvalObject__c</fullName>
    <label>approvalObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>