unpackaged/main/default/objects/Pre_Venta__c/fields/approvalRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>approvalRequestedDate__c</fullName>
    <label>approvalRequestedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>