unpackaged/main/default/objects/Pre_Venta__c/fields/approverEmpId__c.field-meta.xml
<CustomField>
    <fullName>approverEmpId__c</fullName>
    <label>approverEmpId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>