unpackaged/main/default/objects/Pre_Venta__c/fields/approverLogin__c.field-meta.xml
<CustomField>
    <fullName>approverLogin__c</fullName>
    <label>approverLogin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>