unpackaged/main/default/objects/Pre_Venta__c/fields/approverName__c.field-meta.xml
<CustomField>
    <fullName>approverName__c</fullName>
    <label>approverName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>