unpackaged/main/default/objects/Pre_Venta__c/fields/No_Proceso__c.field-meta.xml
<CustomField>
    <fullName>No_Proceso__c</fullName>
    <label>No Proceso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>