unpackaged/main/default/objects/Pre_Venta__c/fields/Nombre_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Solicitante__c</fullName>
    <label>Nombre Solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>