unpackaged/main/default/objects/Pre_Venta__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <label>Plan de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>