unpackaged/main/default/objects/Pre_Venta__c/fields/Proceso__c.field-meta.xml
<CustomField>
    <fullName>Proceso__c</fullName>
    <label>Proceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>