unpackaged/main/default/objects/Pre_Venta__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <label>Quote Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>