unpackaged/main/default/objects/Pre_Venta__c/fields/requesterEmpId__c.field-meta.xml
<CustomField>
    <fullName>requesterEmpId__c</fullName>
    <label>requesterEmpId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>