unpackaged/main/default/objects/Pre_Venta__c/fields/requesterLogin__c.field-meta.xml
<CustomField>
    <fullName>requesterLogin__c</fullName>
    <label>requesterLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>