unpackaged/main/default/objects/Pre_Venta__c/fields/requesterName__c.field-meta.xml
<CustomField>
    <fullName>requesterName__c</fullName>
    <label>requesterName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>