unpackaged/main/default/objects/Pre_Venta__c/fields/sPriListId__c.field-meta.xml
<CustomField>
    <fullName>sPriListId__c</fullName>
    <label>sPriListId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>