unpackaged/main/default/objects/Pre_Venta__c/fields/Valor_de_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Operacion__c</fullName>
    <label>Valor de Operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>