unpackaged/main/default/objects/Pre_Venta__c/recordTypes/VO_Menor_a_Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>VO_Menor_a_Presupuesto</fullName>
    <active>true</active>
    <description>VO. Menor a Presupuesto</description>
    <label>VO. Menor a Presupuesto</label>
</RecordType>