unpackaged/main/default/objects/Pre_Venta__c/listViews/AEC_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>AEC_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>AEC</label>
    <queue>AEC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>