unpackaged/main/default/objects/Pre_Venta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nombre_Solicitante__c</columns>
    <columns>Aprobador_Buscar__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Estatus__c</columns>
    <columns>Proceso__c</columns>
    <columns>Plan_de_Venta__c</columns>
    <columns>Valor_de_Operacion__c</columns>
    <columns>Quote_Id__c</columns>
    <columns>sPriListId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>