unpackaged/main/default/objects/Pre_Venta__c/listViews/APC_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>APC_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>APC</label>
    <queue>APC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>