unpackaged/main/default/objects/Pre_Venta__c/listViews/Colaborador_Javer_Programa_Instituciona_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>Colaborador_Javer_Programa_Instituciona_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Colaborador Javer (Programa Instituciona</label>
    <queue>Colaborador_Javer_Programa_Instituciona</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>