unpackaged/main/default/objects/Pre_Venta__c/listViews/Coordinador_del_Programa_Colaborador_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>Coordinador_del_Programa_Colaborador_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Coordinador del Programa Colaborador</label>
    <queue>Coordinador_del_Programa_Colaborador</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>