unpackaged/main/default/objects/Pre_Venta__c/listViews/Direcci_n_Comercial_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>Direcci_n_Comercial_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Dirección Comercial</label>
    <queue>Direccion_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>