unpackaged/main/default/objects/Pre_Venta__c/listViews/Director_de_UEN_Pre_Venta.listView-meta.xml
<ListView>
    <fullName>Director_de_UEN_Pre_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN NL 1</label>
    <queue>Director_UEN_NL1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>